tests/Types/fail/extra-key.ts
import { route } from "@ninots/routing";

route("users.show", { id: "1", extra: "nope" });
